# vector-edit-gym

./: .env.example  .gitattributes  .gitignore  .vercelignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASET_CARD.md  LICENSE  NOTICE.md  README.md  SECURITY.md  package-lock.json  package.json  vercel.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: openrouter-30.json  openrouter-frontier-4.json
data/: icon-pool.txt  leaderboard.json  model-results-summary.json  model-results.json
data/icons/: _index.json
data/model-results/: sv_001.json  sv_002.json  sv_003.json  sv_004.json  sv_005.json  sv_006.json  sv_007.json  sv_008.json  sv_009.json  sv_010.json  sv_011.json  sv_012.json  sv_013.json  sv_014.json  sv_015.json  sv_016.json  sv_017.json  sv_018.json  sv_019.json  sv_020.json  sv_021.json  sv_022.json  sv_023.json  sv_024.json  sv_025.json  sv_026.json  sv_027.json  sv_028.json  sv_029.json  sv_030.json  sv_031.json  sv_032.json  sv_033.json  sv_034.json  sv_035.json  sv_036.json  sv_037.json  sv_038.json  sv_039.json  sv_040.json
data/tasks/: _index.json  ea_001.json  ea_002.json  ea_003.json  ea_004.json  ea_005.json  ea_006.json  ea_007.json  ea_008.json  ea_009.json  ea_010.json  ea_011.json  ea_012.json  ea_013.json  ea_014.json  ea_015.json  ea_016.json  ea_017.json  ea_018.json  ea_019.json  ea_020.json  ea_021.json  ea_022.json  ea_023.json  ea_024.json  ea_025.json  ea_026.json  ea_027.json  ea_028.json  ea_029.json  ea_030.json  ea_031.json  ea_032.json  ea_033.json  ea_034.json  ea_035.json  ea_036.json  ea_037.json  ea_038.json  ea_039.json  (+331 more)
data/tasks_legacy/: _index.json  ea_001.json  ea_002.json  ea_003.json  ea_004.json  ea_005.json  ea_006.json  ea_007.json  ea_008.json  ea_009.json  ea_010.json  ea_011.json  ea_012.json  ea_013.json  ea_014.json  ea_015.json  ea_016.json  ea_017.json  ea_018.json  ea_019.json  ea_020.json  ea_021.json  ea_022.json  ea_023.json  ea_024.json  ea_025.json  ea_026.json  ea_027.json  ea_028.json  ea_029.json  ea_030.json  ea_031.json  ea_032.json  ea_033.json  ea_034.json  ea_035.json  (+265 more)
launch-video/: .gitignore  README.md  package-lock.json  package.json  remotion.config.ts
paper/: acl_natbib.bst  custom.bib  main.tex
scripts/: analyze-results.py  author-all.mjs  benchmark-litellm.py  benchmark-openrouter.py  build-index.mjs  generate-easy.mjs  generate-harbor.mjs  generate-hard.mjs  generate-medium.mjs  generate-trace-figure.py  generate-very-easy.mjs  generate-very-hard.mjs  humanize-instructions.mjs  import-scenic-downloads.py  merge-runs.py  mix-v2-tasks.py  prepare-viewer-data.mjs  publish-model-results.mjs  rescore-results.py  scrape-icons.mjs  verify-published-traces.mjs
sdk/python/: README.md  RUN.md  pyproject.toml
sdk/python/tests/: test_analysis.py  test_corpus.py  test_merge_runs.py  test_metrics.py  test_rescore_traces.py  test_tracing.py
sdk/python/vector_edit_gym/: __init__.py  cli.py  diffing.py  evaluate.py  metrics.py  tasks.py  tracing.py
sdk/python/vector_edit_gym/examples/: claude_solver.py  litellm_solver.py  noop_solver.py  openai_solver.py  oracle_solver.py
viewer/: components.json  engine-lib  next.config.mjs  package-lock.json  package.json
(+501 files in other folders)
