[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vector-edit-gym"
version = "0.1.0"
description = "VectorEditGym: a preservation-aware benchmark for SVG repair."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "VectorEditGym" }]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.40"]
litellm = ["openai>=1.40"]
test = ["pytest>=8.0"]
analysis = ["matplotlib>=3.9", "numpy>=2.0", "pillow>=11.0"]

[project.scripts]
vec-edit-gym = "vector_edit_gym.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["vector_edit_gym"]
