[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vector-edit-gym"
version = "0.2.0"
description = "VectorEditGym: a preservation-aware benchmark for SVG repair."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Yug Aditi Gupta", email = "yug@thetalab.tech" },
  { name = "Prannay Hebbar", email = "prannay@warping.co" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["svg.path>=7.0,<8"]

[project.urls]
Homepage = "https://www.vecbench.xyz"
Repository = "https://github.com/yug-space/vector-edit-gym"
Paper = "https://www.vecbench.xyz/vectoreditgym-paper.pdf"
Issues = "https://github.com/yug-space/vector-edit-gym/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.40"]
litellm = ["openai>=1.40"]
test = ["pytest>=8.0"]
analysis = ["matplotlib>=3.9", "numpy>=2.0", "pillow>=11.0"]

[project.scripts]
vec-edit-gym = "vector_edit_gym.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["vector_edit_gym"]
